--- a/src/app/nos-locaux/nos-locaux.component.scss
+++ b/src/app/nos-locaux/nos-locaux.component.scss
@@ -1,4 +1,8 @@
-.local2 {
-  max-width: 95%;
-  max-height: 95%;
+
+img.image-diaporama {
+  cursor: pointer;
+  width: 200px;
+  height: 170px;
+  padding: 5px;
+  border-radius: 10px;
 }
