--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.scss
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.scss
@@ -1,9 +1,7 @@
-.cat {
-  max-width: 30%;
-  max-height: 30%;
-}
-
-.local2 {
-  max-width: 95%;
-  max-height: 95%;
+img.image-diaporama {
+  cursor: pointer;
+  width: 350px;
+  height: 300px;
+  padding: 5px;
+  border-radius: 10px;
 }
