--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,8 +1,19 @@
 <div>
 
-  <div class="row text-center pb-5 justify-content-center mt-5">
-    <img class="img-rounded-corners local" src="../../assets/images/local global.jpg" alt="local">
+  <div class="row justify-content-center pt-4 pb-4">
+    <div class="diaporama text-center">
+      <img class="image-diaporama" *ngFor="let image of images; let i = index;" [src]="image.image" [alt]="image.alt"
+           (click)="showLightbox(i)">
+    </div>
   </div>
+</div>
+
+<ng-image-fullscreen-view
+  [images]="images"
+  [imageIndex]="selectedImageIndex"
+  [show]="showFlag"
+  (close)="closeEventHandler()">
+</ng-image-fullscreen-view>
 
 <div class="row">
   <div class="col pb-3">
@@ -38,7 +49,9 @@
           <li>MDPH</li>
         </ul>
         <div class="color-peche-foncee text-center mt-3">
-          Vous voulez réserver pour une personne non représentée ci-dessus ? <span class="typo-link" routerLink="/contact">Contactez-nous !</span></div>
+          Vous voulez réserver pour une personne non représentée ci-dessus ? <span class="typo-link"
+                                                                                   routerLink="/contact">Contactez-nous !</span>
+        </div>
       </div>
     </div>
   </div>
@@ -69,4 +82,4 @@
     </div>
   </div>
 </div>
-</div>
+
