Ajout mots clés référencement

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -19,7 +19,7 @@
   <div class="col pb-3">
     <div class="jumbo">
       <div class="jumbo-title">
-        Le concept
+        Le concept de Séréni'chat : de la médiation animale à Paris
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
@@ -28,6 +28,8 @@
           </div>
           <div>Nous recueillons des chats et lapins en attente d'adoption, et ouvrons nos portes aux enfants en
             ressentant le besoin afin qu'ils profitent de quelques heures en compagnie de nos petits protégés.
+          </div>
+          <div>La médiation animale, la zoothérapie et l'activité assistée par l'animal apportent un réel mieux être à leurs bénéficiaires. Si vous voulez tester une séance gratuite, vous êtes les bienvenus !
           </div>
         </div>
       </div>
