ajout lien partenaire

--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="color-peche-foncee mb-3">
               <div>Notre association partenaire pour les chats :</div>
-              <div>Les Copains d'Akina</div>
+              <div><a href="https://www.lescopainsdakina.fr" target="_blank">Les Copains d'Akina</a></div>
             </div>
           </div>
         </div>
