--- a/src/app/nos-locaux/nos-locaux.component.html
+++ b/src/app/nos-locaux/nos-locaux.component.html
@@ -3,7 +3,7 @@
     <div>Les locaux</div>
   </div>
   <div class="color-turquoise-foncee text-center">
-    <div>Séréni'chat a fait son nid au 15, Rue Desargues 75011 Paris.</div>
+    <div>Séréni'chat a fait son nid au <a href="https://www.google.com/maps/place/15+Rue+Desargues,+75011+Paris" target="_blank">15, Rue Desargues 75011 Paris.</a></div>
     <div>-Le local est accessible aux personnes à mobilité réduite-</div>
   </div>
 
