détails + fermé boolean

--- a/src/app/nos-locaux/nos-locaux.component.html
+++ b/src/app/nos-locaux/nos-locaux.component.html
@@ -22,7 +22,7 @@
 
 <div class="text-big">
 <div class="color-peche-foncee text-center">
-  <div>Accès transports en commun</div>
+  <div>Accès</div>
 </div>
 <div class="color-turquoise-foncee text-center">
   <div>En métro : Couronnes (ligne 2) ou Belleville (lignes 2 et 11)</div>
