--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -31,10 +31,10 @@
       </div>
     </div>
   </div>
-  <div class="col text-center mt-5 mb-5">
+  <div class="col text-center mt-5">
       <img src="../../assets/images/main.png" alt="main logo" class="logo-main">
   </div>
-  <div class="col">
+  <div class="col mt-5">
     <div class="jumbo">
       <div class="jumbo-title">
         Faire un don financier
