--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,7 +1,8 @@
 <div class="text-big">
   <div class="color-peche-foncee text-center mt-5">
-    <div>La première séance <u>d’une heure</u> est gratuite !</div>
-     <div class="color-turquoise-foncee text-left mt-1">
+    <div>Ouverture officielle le samedi 18 Juillet 2020 !</div>
+    <div>-La première séance <u>d’une heure</u> est gratuite-</div>
+     <div class="color-turquoise-foncee text-left mt-3">
       <div>Pour les heures suivantes, nos tarifs :</div>
       <div>- Une place en séance d’une heure classique : 30 euros.</div>
       <div>- Séance individuelle : 45 euros.</div>
