texte, photo et bold

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -19,17 +19,17 @@
   <div class="col pb-3">
     <div class="jumbo">
       <div class="jumbo-title">
-        Le concept de Séréni'chat : de la médiation animale à Paris
+        Le concept de <b>Séréni'chat</b> : de la <b>médiation animale</b> à Paris
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>Séréni'chat est un lieu dédié à l'assistance aux enfants handicapés par le contact
-            avec l'animal. Notre local comporte également une salle multi-sensorielle.
+          <div><b>Séréni'chat</b> est un lieu dédié à l'assistance aux <b>enfants handicapés</b> par le <b>contact
+            avec l'animal</b>. Notre local comporte également une salle <b>multi-sensorielle.</b>
           </div>
-          <div>Nous recueillons des chats et lapins en attente d'adoption, et ouvrons nos portes aux enfants en
+          <div>Nous recueillons des <b>chats</b> et <b>lapins</b> en attente d'adoption, et ouvrons nos portes aux enfants en
             ressentant le besoin afin qu'ils profitent de quelques heures en compagnie de nos petits protégés.
           </div>
-          <div>La médiation animale, la zoothérapie et l'activité assistée par l'animal apportent un réel mieux être à leurs bénéficiaires. Si vous voulez tester une séance gratuite, vous êtes les bienvenus !
+          <div>La <b>médiation animale</b> (ou <b>zoothérapie</b>) et la stimulation <b>sensorielle</b> apportent un réel <b>mieux être</b> à leurs bénéficiaires. Si vous voulez tester une <b>séance gratuite</b>, vous êtes les bienvenus !
           </div>
         </div>
       </div>
@@ -38,17 +38,15 @@
   <div class="col">
     <div class="jumbo">
       <div class="jumbo-title">
-        Séréni'Chat s'adresse aux :
+      <b>Séréni'chat</b> s'adresse aux :
       </div>
       <div class="jumbo-body">
         <ul class="color-turquoise-foncee">
-          <li>Enfants neuro-atypiques</li>
-          <li>Enfants handicapés moteurs</li>
-          <li>Enfants souffrant d'anxiété</li>
-          <li>Associations TSA/trisomie/TED</li>
-          <li>Classes ULIS</li>
-          <li>Hôpitaux de jour pédiatriques</li>
-          <li>MDPH</li>
+          <li>Enfants <b>neuro-atypiques</b> (TSA, TED)</li>
+          <li>Enfants souffrant d'<b>anxiété</b> ou de <b>troubles obsessionnels</b></li>
+          <li>Enfants <b>trisomiques</b></li>
+          <li>Enfants <b>malades chroniques</b></li>
+          <li><b>Particuliers</b> ou <b>organisations</b> : classes ULIS, HDJP, MDPH...</li>
         </ul>
         <div class="color-peche-foncee text-center mt-3">
           Vous voulez réserver pour une personne non représentée ci-dessus ? <span class="typo-link"
@@ -64,11 +62,11 @@
     <img src="../../assets/images/free-cat-clipart-silhouette-vector-images.png" alt="cat logo" class="logo-cat">
     <div class="jumbo">
       <div class="jumbo-title">
-        Qui gère Séréni'chat ?
+        Qui gère <b>Séréni'chat</b> ?
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-left">
-          <div class="color-peche-foncee">Noémie, fondatrice :</div>
+          <div class="color-peche-foncee"><b>Noémie</b>, fondatrice :</div>
           <div class="color-turquoise-foncee">
             <div>5 ans d'enseignement</div>
             <div>Intervenante classe ULIS</div>
