--- a/src/app/nos-locaux/nos-locaux.component.html
+++ b/src/app/nos-locaux/nos-locaux.component.html
@@ -1,6 +1,6 @@
 <div class="text-big">
   <div class="color-peche-foncee text-center mt-5">
-    <div>Les locaux</div>
+    <div><b>Les locaux</b></div>
   </div>
   <div class="color-turquoise-foncee text-center">
     <div>Séréni'chat a fait son nid au <a href="https://www.google.com/maps/place/15+Rue+Desargues,+75011+Paris" target="_blank">15, Rue Desargues 75011 Paris.</a></div>
@@ -22,11 +22,11 @@
 
 <div class="text-big">
 <div class="color-peche-foncee text-center">
-  <div>Accès</div>
+  <div><b>Accès</b></div>
 </div>
 <div class="color-turquoise-foncee text-center">
-  <div>En métro : Couronnes (ligne 2) ou Belleville (lignes 2 et 11)</div>
-  <div>En bus : Maison des Metallos (bus 96), Couronnes (bus 96) ou Ramponeau (bus 20 et 71)</div>
-  <div>En voiture : Places pour personnes en situation de handicap à proximité</div>
+  <div><b>En métro</b> : Couronnes (ligne 2) ou Belleville (lignes 2 et 11)</div>
+  <div><b>En bus</b> : Maison des Metallos (bus 96), Couronnes (bus 96) ou Ramponeau (bus 20 et 71)</div>
+  <div><b>En voiture</b> : Places pour personnes en situation de handicap à proximité</div>
 </div>
 </div>
