--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -3,11 +3,11 @@
     <div class="col pb-3">
       <div class="jumbo">
         <div class="jumbo-title">
-          D'où viennent nos pensionnaires ?
+          <b>D'où viennent nos pensionnaires ?</b>
         </div>
         <div class="jumbo-body">
           <div class="color-turquoise-foncee text-center">
-            <div class="mb-4">Les chats et lapins accueillis par Séréni'chat viennent d'associations, refuges, familles d'accueil...
+            <div class="mb-4">Les chats et lapins accueillis par <b>Séréni'chat</b> viennent d'associations, refuges, familles d'accueil...
               Certains ont du mal à trouver des adoptants notamment parce qu'ils sont trop discrets, différents ou trop
               âgés. N'hésitez pas à faire leur connaissance !
             </div>
@@ -22,16 +22,16 @@
     <div class="col">
       <div class="jumbo">
         <div class="jumbo-title">
-          Adoption
+        <b>Adoption</b>
         </div>
         <div class="jumbo-body">
           <div class="color-turquoise-foncee text-center">
-            <div>Un coup de cœur ? <br>Certains de nos pensionnaires félins sont adoptables !</div>
+            <div>Un coup de cœur ? <br>Certains de nos pensionnaires félins sont <b>adoptables</b> !</div>
             <div>Contactez-nous afin de discuter des conditions d'adoption et être redirigé vers notre association
               partenaire.</div>
-            <div><u>Remarque</u> : Bran, Sansa, Arya, Lulu et Tokyo sont nos résidents permanents. Ils ne sont pas à l'adoption, vous pourrez les voir à chacune de vos visites !</div>
-            <div class="color-peche-foncee mt-3 text-left">Important</div>
-            <div class="text-left">Comme nous sommes famille d'accueil, nos chats ne sont pas toujours les mêmes ! Nous essayons de mettre à jour notre site régulièrement mais il est possible que nous n'ayons pas encore eu le temps de changer les photos.</div>
+            <div><u><b>Remarque</b></u> : Bran, Sansa, Arya, Lulu et Tokyo sont nos résidents <b>permanents</b>. Ils ne sont pas à l'adoption, vous pourrez les voir à chacune de vos visites !</div>
+            <div class="color-peche-foncee mt-3 text-left"><b>Important</b></div>
+            <div class="text-left">Comme nous sommes <b>famille d'accueil</b>, nos chats ne sont pas toujours les mêmes ! Nous essayons de mettre à jour notre site régulièrement mais il est possible que nous n'ayons pas encore eu le temps de changer les photos.</div>
             </div>
           </div>
         </div>
