--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -1,6 +1,6 @@
 <div class="text-big">
   <div class="color-turquoise-foncee text-center mt-5">
-    <div>Si Séréni'chat est payant, c'est pour nous aider à louer notre local et à fournir nourriture, litière et soins vétérinaires à nos
+    <div>Si Séréni'chat est payant, c'est pour nous aider à louer notre <b>local</b> et à fournir <b>nourriture</b>, <b>litière</b> et <b>soins vétérinaires</b> à nos
       protégés.
     </div>
   </div>
@@ -12,7 +12,7 @@
   <div class="col">
     <div class="jumbo">
       <div class="jumbo-title">
-        Faire un don matériel
+        Faire un don <b>matériel</b>
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
@@ -37,7 +37,7 @@
   <div class="col mt-5">
     <div class="jumbo">
       <div class="jumbo-title">
-        Faire un don financier
+        Faire un don <b>financier</b>
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
