--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,13 +1,13 @@
 <div class="text-big">
   <div class="color-peche-foncee text-center mt-5">
-    <div>Ouverture officielle le samedi 18 Juillet 2020 !</div>
-    <div>-La première séance <u>d’une heure</u> est gratuite-</div>
+    <div>Ouverture officielle le <b>samedi 18 Juillet 2020</b> !</div>
+    <div>-La première séance <u>d’une heure</u> est <b>gratuite</b>-</div>
      <div class="color-turquoise-foncee text-left mt-3">
       <div>Pour les heures suivantes, nos tarifs :</div>
-      <div>- Une place en séance d’une heure classique : 30 euros.</div>
-      <div>- Séance individuelle : 45 euros.</div>
-      <div>- Une place en demi journée classique : 75 euros (4h à 25 euros dont 1h offerte).</div>
-      <div>- Demi journée individuelle : 120 euros (4h à 40 euros dont 1h offerte).</div>
+      <div>- Une place en séance d’une heure <b>classique</b> : 30 euros.</div>
+      <div>- Séance <b>individuelle</b> : 45 euros.</div>
+      <div>- Une place en demi journée <b>classique</b> : 75 euros (4h à 25 euros dont 1h offerte).</div>
+      <div>- Demi journée <b>individuelle</b> : 120 euros (4h à 40 euros dont 1h offerte).</div>
      </div>
   </div>
 </div>
