--- a/src/app/nos-locaux/nos-locaux.component.html
+++ b/src/app/nos-locaux/nos-locaux.component.html
@@ -4,7 +4,8 @@
   </div>
   <div class="color-turquoise-foncee text-center">
     <div>Séréni'chat a fait son nid au <a href="https://www.google.com/maps/place/15+Rue+Desargues,+75011+Paris" target="_blank">15, Rue Desargues 75011 Paris.</a></div>
-    <div>-Le local est accessible aux personnes à mobilité réduite-</div>
+    <div>Le local est accessible aux personnes à mobilité réduite.</div>
+    <div class="color-peche-foncee mt-2">-Cliquez sur les images pour les agrandir-</div>
   </div>
 
 <div class="row justify-content-center pt-4 pb-4">
