--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -38,6 +38,7 @@
       </div>
     </div>
   </div>
+  <div class="color-peche-foncee mt-3">-Cliquez sur les images pour les agrandir-</div>
 <div class="row justify-content-center pt-5">
   <div class="diaporama">
     <img class="image-diaporama" *ngFor="let image of images; let i = index;" [src]="image.image" [alt]="image.alt" (click)="showLightbox(i)">
