--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -44,7 +44,7 @@
         <ul class="color-turquoise-foncee">
           <li>Enfants <b>neuro-atypiques</b> (TSA, TED)</li>
           <li>Enfants souffrant d'<b>anxiété</b> ou de <b>troubles obsessionnels</b></li>
-          <li>Enfants <b>trisomiques</b></li>
+          <li>Enfants porteurs de <b>trisomie</b></li>
           <li>Enfants <b>malades chroniques</b></li>
           <li><b>Particuliers</b> ou <b>organisations</b> : classes ULIS, HDJP, MDPH...</li>
         </ul>
