--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -49,8 +49,8 @@
           <li><b>Particuliers</b> ou <b>organisations</b> : classes ULIS, HDJP, MDPH...</li>
         </ul>
         <div class="color-peche-foncee text-center mt-3">
-          Vous voulez réserver pour une personne non représentée ci-dessus ? <span class="typo-link"
-                                                                                   routerLink="/contact">Contactez-nous !</span>
+          Vous voulez réserver pour une personne non représentée ci-dessus (un adulte par exemple) ? <span class="typo-link"
+                                                                                   routerLink="/contact">Contactez-nous</span> afin de déterminer si c'est possible !
         </div>
       </div>
     </div>
@@ -68,11 +68,9 @@
         <div class="color-turquoise-foncee text-left">
           <div class="color-peche-foncee"><b>Noémie</b>, fondatrice :</div>
           <div class="color-turquoise-foncee">
-            <div>5 ans d'enseignement</div>
-            <div>Intervenante classe ULIS</div>
-            <div>Formation Sésame Autisme</div>
-            <div>Certificat de capacité chien/chat/autres animaux domestiques</div>
-            <div>Formation aux premiers secours.</div>
+            <div>Après plusieurs années d'enseignement qui ont été fantastiques, j'ai décidé de créer ma propre activité 
+              mêlant deux pôles essentiels à mon projet de vie : l'assistance aux personnes différentes et la protection des animaux.</div>
+            <div>Je me forme en continu concernant ces deux aspects de l'activité, et possède bien entendu le certificat de capacité Animaux Domestiques ainsi qu'une formation aux Premiers Secours.</div>
             <div class="color-peche-foncee text-center mt-3">
               Vous êtes entre de bonnes mains !
             </div>
