--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -9,6 +9,10 @@
       <div>- Une place en demi journée <b>classique</b> : 75 euros (4h à 25 euros dont 1h offerte).</div>
       <div>- Demi journée <b>individuelle</b> : 120 euros (4h à 40 euros dont 1h offerte).</div>
      </div>
+     <div class="color-peche-foncee text-center mt-5">
+      <div>Remarque : si vous souhaitez réserver pour un adulte, merci de nous <span class="typo-link"
+        routerLink="/contact">contacter</span> au préalable pour en discuter.</div>
+      </div>
   </div>
 </div>
 
