contenu séances txt

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -31,6 +31,14 @@
           </div>
           <div>La <b>médiation animale</b> (ou <b>zoothérapie</b>) et la stimulation <b>sensorielle</b> apportent un réel <b>mieux être</b> à leurs bénéficiaires. Si vous voulez tester une <b>séance gratuite</b>, vous êtes les bienvenus !
           </div>
+          <div class="mt-3 color-peche-foncee">
+            Comment se déroule une <b>séance</b> ?</div>
+          <div>Cela dépend de chaque visiteur : certains choissent des <b>activités proposées</b> 
+            (nourrissage, jeux, caresses, dessin, salle multi-sensorielle...),
+          d'autres aiment simplement <b>profiter du lieu</b> de façon autonome sans rien faire de particulier,
+          et d'autres encore apportent leur <b>activité préférée</b> (casque et musique, matériel de dessin ou 
+          de photographie) pour être simplement entourés d'animaux.
+          </div>
         </div>
       </div>
     </div>
