--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -67,7 +67,7 @@
 
 <div class="row mt-3 justify-content-center">
   <div class="col-11">
-    <img src="../../assets/images/free-cat-clipart-silhouette-vector-images.png" alt="cat logo" class="logo-cat">
+    <img src="../../assets/images/free-cat-clipart-silhouette-vector-images.jpg" alt="cat logo" class="logo-cat">
     <div class="jumbo">
       <div class="jumbo-title">
         Qui gère <b>Séréni'chat</b> ?
