--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="col text-center mt-5">
-      <img src="../../assets/images/main.png" alt="main logo" class="logo-main">
+      <img src="../../assets/images/main.jpg" alt="main logo" class="logo-main">
   </div>
   <div class="col mt-5">
     <div class="jumbo">
