footer images webp

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,17 +5,17 @@
   <div class="row text-center">
     <div class="col">
       <a href="https://www.facebook.com/Serenichat" target="_blank">
-        <img src="../../assets/images/logofb.jpg" alt="facebook" class="reseaux">
+        <img src="../../assets/images/logofb.webp" alt="facebook" class="reseaux">
       </a>
     </div>
     <div class="col">
       <a href="https://www.instagram.com/serenichat" target="_blank">
-        <img src="../../assets/images/logoinsta.jpg" alt="instagram" class="reseaux">
+        <img src="../../assets/images/logoinsta.webp" alt="instagram" class="reseaux">
       </a>
     </div>
     <div class="col">
       <a href="https://twitter.com/Serenichat" target="_blank">
-        <img src="../../assets/images/logotwi.jpg" alt="twitter" class="reseaux">
+        <img src="../../assets/images/logotwi.webp" alt="twitter" class="reseaux">
       </a>
     </div>
   </div>
