accents et footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,4 +20,5 @@
     </div>
   </div>
 </div>
-
+<div class="jumbo-body color-turquoise-foncee text-center">
+Séréni'chat médiation animale : 15 rue Desargues 75011 Paris</div>
