--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
       <div [class]="getLinkClass('/')" routerLink="">Accueil</div>
     </div>
     <div class="col">
-      <div [class]="getLinkClass('/nos-locaux')" routerLink="/nos-locaux">Nos locaux</div>
+      <div [class]="getLinkClass('/nos-locaux')" routerLink="/nos-locaux">Locaux et photos</div>
     </div>
     <div class="col">
       <div [class]="getLinkClass('/nos-pensionnaires')" routerLink="/nos-pensionnaires">Nos pensionnaires</div>
