--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="row justify-content-center mt-3">
     <div class="col text-center">
-      <img routerLink="" src="../../assets/images/logo.jpg" alt="logo" class="logo">
+      <img routerLink="" src="../../assets/images/logo.jpg" alt="logo serenichat médiation animale Paris" class="logo">
     </div>
 
   </div>
