photos pro site

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -2,8 +2,8 @@
 
   <div class="row justify-content-center pt-4 pb-4">
     <div class="diaporama text-center">
-      <img class="image-diaporama" *ngFor="let image of images; let i = index;" [src]="image.image" [alt]="image.alt"
-           (click)="showLightbox(i)">
+      <img class="image-diaporama" [src]="images[0].image" [alt]="images[0].alt"
+                 (click)="showLightbox(0)">
     </div>
   </div>
 </div>
@@ -71,6 +71,15 @@
     <div class="jumbo">
       <div class="jumbo-title">
         Qui gère <b>Séréni'chat</b> ?
+      </div>
+      <div>
+
+        <div class="row justify-content-center pt-4 pb-4">
+          <div class="diaporama text-center">
+            <img class="image-diaporama" [src]="images[1].image" [alt]="images[1].alt"
+                 (click)="showLightbox(1)">
+          </div>
+        </div>
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-left">
