par exemple et taille img accueil

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -37,7 +37,7 @@
             (nourrissage, jeux, caresses, dessin, salle multi-sensorielle...),
           d'autres aiment simplement <b>profiter du lieu</b> de façon autonome sans rien faire de particulier,
           et d'autres encore apportent leur <b>activité préférée</b> (casque et musique, matériel de dessin ou 
-          de photographie) pour être simplement entourés d'animaux.
+          de photographie par exemple) pour être simplement entourés d'animaux.
           </div>
         </div>
       </div>
