modifs vid, semaines prec suiv, txt

--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -19,10 +19,10 @@
           <div>Vous pouvez nous amener
           </div>
           <div class="text-left">
-            <div>- pour les chats : des croquettes pour chats stérilisés, de la litière agglomérante, des petites
+            <div>- pour les chats : des croquettes pour chats stérilisés, de la litière végétale, des petites
               friandises pour chat, des jouets
             </div>
-            <div>-pour les lapins : du foin, de la litière végétale, des fruits et légumes frais (carottes, épinards, endives, bananes, pommes), des jouets
+            <div>-pour les lapins : du foin, leurs fruits et légumes frais préférés (carotte, banane), des jouets à ronger
             </div>
             <div>- autre chose qui leur ferait plaisir !
             </div>
