--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -85,9 +85,9 @@
         <div class="color-turquoise-foncee text-left">
           <div class="color-peche-foncee"><b>Noémie</b>, fondatrice :</div>
           <div class="color-turquoise-foncee">
-            <div>Après plusieurs années d'enseignement qui ont été fantastiques, j'ai décidé de créer ma propre activité 
+            <div>Enseignante de biologie accueillant depuis des années des élèves de classe ULIS, j'ai décidé de créer ma propre activité 
               mêlant deux pôles essentiels à mon projet de vie : l'assistance aux personnes différentes et la protection des animaux.</div>
-            <div>Je me forme en continu concernant ces deux aspects de l'activité, et possède bien entendu le certificat de capacité Animaux Domestiques ainsi qu'une formation aux Premiers Secours.</div>
+            <div>Je me forme en continu concernant ces deux aspects de l'activité, et possède le certificat de capacité Animaux Domestiques ainsi qu'une formation aux Premiers Secours.</div>
             <div class="color-peche-foncee text-center mt-3">
               Vous êtes entre de bonnes mains !
             </div>
