--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -5,7 +5,7 @@
      <div class="color-turquoise-foncee text-left mt-3">
       <div>Pour les heures suivantes, nos tarifs :</div>
       <div>- Une place en séance d’une heure <b>classique</b> : 30 euros.</div>
-      <div>- Séance <b>individuelle</b> : 45 euros.</div>
+      <div>- Séance <b>individuelle</b> d'une heure : 45 euros.</div>
       <div>- Une place en demi journée <b>classique</b> : 75 euros (4h à 25 euros dont 1h offerte).</div>
       <div>- Demi journée <b>individuelle</b> : 120 euros (4h à 40 euros dont 1h offerte).</div>
      </div>
@@ -14,9 +14,10 @@
         routerLink="/contact">contacter</span> au préalable pour en discuter.</div>
       </div>
       <div class="color-turquoise-foncee text-center mt-5">
-        <div>(Certains navigateurs ne veulent pas actualiser la page Réservation quand vous cliquez sur "actualiser" ou utilisez F5. 
+        <div><i>(Certains navigateurs ne veulent pas actualiser la page Réservation quand vous cliquez sur "actualiser" ou utilisez F5. 
           Pas de panique, l'emploi du temps est actualisé automatiquement ! 
-          Vous pouvez aussi aller sur un autre onglet de notre site puis revenir sur "Réservation").</div>
+          Vous pouvez aussi aller sur un autre onglet de notre site puis revenir sur "Réservation", 
+          ou bien utiliser les flèches "semaine précédente" puis "semaine suivante")</i></div>
         </div>
   </div>
 </div>
