photos à jour + txt

--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -14,7 +14,7 @@
         routerLink="/contact">contacter</span> au préalable pour en discuter.</div>
       </div>
       <div class="color-turquoise-foncee text-center mt-5">
-        <div><i>(Certains navigateurs ne veulent pas actualiser la page Réservation quand vous cliquez sur "actualiser" ou utilisez F5. 
+        <div><i>(Certains navigateurs ne veulent pas actualiser la page Réservation quand vous leur demandez. 
           Pas de panique, l'emploi du temps est actualisé automatiquement ! 
           Vous pouvez aussi aller sur un autre onglet de notre site puis revenir sur "Réservation", 
           ou bien utiliser les flèches "semaine précédente" puis "semaine suivante")</i></div>
@@ -58,7 +58,7 @@
 
 <div class="row justify-content-start legende">
   <div class="col-2 empty-color">2/2 places libres</div>
-  <div class="col-2 half-hour-color">1/2 place libre une heure</div>
+  <div class="col-2 half-hour-color">1/2 place libre séance 1h</div>
   <div class="col-2 half-day-color">1/2 place libre demi-journée</div>
   <div class="col-2 full-color">Complet</div>
   <div class="col-2 closed-color">Fermé</div>
