--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -23,11 +23,12 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div><b>Séréni'chat</b> est un lieu dédié à l'assistance aux <b>enfants handicapés</b> par le <b>contact
-            avec l'animal</b>. Notre local comporte également une salle <b>multi-sensorielle.</b>
-          </div>
+          <div><b>Séréni'chat</b> est un lieu dédié à l'assistance aux <b>personnes handicapées</b> (et plus spécialement les enfants) par le <b>contact
+            avec l'animal</b>. Notre local comporte également une salle <b>multi-sensorielle.</b></div>
+          <div>Nous essayons aussi d'apporter un <b>soulagement</b> aux <b>parents ou aidants</b> : ils peuvent tout à fait nous <b>confier</b> leur enfant
+             sans rester pendant la séance, et profiter ainsi d'une <b>heure de libre</b> !</div>
           <div>Nous recueillons des <b>chats</b> et <b>lapins</b> en attente d'adoption, et ouvrons nos portes aux enfants en
-            ressentant le besoin afin qu'ils profitent de quelques heures en compagnie de nos petits protégés.
+            ressentant le besoin afin qu'ils profitent de quelques heures en compagnie de nos petits protégés. 
           </div>
           <div>La <b>médiation animale</b> (ou <b>zoothérapie</b>) et la stimulation <b>sensorielle</b> apportent un réel <b>mieux être</b> à leurs bénéficiaires. Si vous voulez tester une <b>séance gratuite</b>, vous êtes les bienvenus !
           </div>
@@ -55,6 +56,7 @@
           <li>Enfants porteurs de <b>trisomie</b></li>
           <li>Enfants <b>malades chroniques</b></li>
           <li><b>Particuliers</b> ou <b>organisations</b> : classes ULIS, HDJP, MDPH...</li>
+          <li><b>Parents</b> ou <b>aidants</b> à la recherche d'une activité leur apportant un <b>moment de répit</b></li>
         </ul>
         <div class="color-peche-foncee text-center mt-3">
           Vous voulez réserver pour une personne non représentée ci-dessus (un adulte par exemple) ? <span class="typo-link"
